// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Chip Chip Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-tmm911-Chip"
        data-testid="chip"
      >
        <div>
          Medium Size
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1amsqs3-Chip"
        data-testid="chip"
      >
        <div>
          Small Size
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip Styles 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-tmm911-Chip"
        data-testid="chip"
      >
        <div>
          Filled Style
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-vsx9lv-Chip"
        data-testid="chip"
      >
        <div>
          Outlined Style
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Chip with Icons 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-49mm0z-Chip"
            data-testid="chip"
          >
            <div
              className="css-1sj8eh0-Chip"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label Text
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-1mj8beh-Chip"
            data-testid="chip"
          >
            <div>
              <div>
                Label Text
              </div>
            </div>
            <div
              className="css-1sj8eh0-Chip"
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
        <div
          className="css-1in66tu-ChipShowcase"
        >
          <div
            className="css-7l6u8k-Chip"
            data-testid="chip"
          >
            <div
              className="css-1wo0jal-Chip"
              onClick={[Function]}
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
            <div>
              <div>
                Label Text
              </div>
            </div>
            <div
              className="css-1wo0jal-Chip"
              onClick={[Function]}
            >
              <img
                src="https://brandmark.io/logo-rank/random/pepsi.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Chip Dynamic Chip Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-tmm911-Chip"
        data-testid="chip"
      >
        <div>
          <div>
            change me!
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
